# rgb-led-matrix

./: .gitignore  .gitmodules  CMakeLists.txt  Differences_from_fork.md  Doxyfile  README.md  build.sh
doc/: difference_from_fork.md
doc/notes/: SIMD.cpp
firmware/: build.sh
firmware/RP2040_Module/: CMakeLists.txt  OE_delay.S  main.cpp  port.cpp  port.h
firmware/RP2040_Module/include/Multiplex/: ABCShiftRegisterMultiplex.h  DirectABCDLineMultiplex.h  DirectMultiplex.h  Multiplex.h  SM5266Multiplex.h  ShiftRegisterMultiplex.h
firmware/RP2040_Module/src/Multiplex/: ABCShiftRegisterMultiplex.cpp  CMakeLists.txt  DirectABCDLineMultiplex.cpp  DirectMultiplex.cpp  Multiplex.cpp  SM5266Multiplex.cpp  ShiftRegisterMultiplex.cpp
include/: led-matrix.h
lib/: framebuffer-internal.h  framebuffer.cc  led-matrix.cc
lib/include/: framecanvas.h
lib/include/framebuffer/: framebuffer-internal.h  framebuffer.h
lib/include/framebuffer/BCM/: BCM.h
lib/include/framebuffer/RP2040/: RP2040.h
lib/include/pin-pulser/: pin-pulser.h
lib/include/port/gpio/: gpio.h
lib/include/port/pin-mapper/: hardware-mapping.h
lib/include/port/thread/: thread.h
lib/src/: CMakeLists.txt  framecanvas.cc
lib/src/framebuffer/: framebuffer.cc
lib/src/framebuffer/RP2040/: RP2040.cpp
rgb-led-matrix/: CMakeLists.txt  README.md
rgb-led-matrix/include/: Panel.h  RGBMatrix.h  canvas.h  led-matrix.h  types.h
rgb-led-matrix/include/CFG/: BCM_CFG.h  CFG.h  HUB75.h  HUB75_BCM_CFG.h  RP2040_CFG.h  RP2040_Multiplexed_Dual_UART_CFG.h  RP2040_Multiplexed_PMP_CFG.h  RP2040_SPI_CFG.h  Wavelength_Mapper.h  types.h
rgb-led-matrix/include/CFG/RP2040/: RP2040_CFG.h
rgb-led-matrix/include/CFG/RP2040_UART/: RP2040_SPI_CFG.h  RP2040_UART_CFG.h
rgb-led-matrix/include/CFG/Types/: DOTCorrect.h  GAMMA.h  types.h
rgb-led-matrix/include/Drawer/: Drawer.h
rgb-led-matrix/include/Event/: Event.h
rgb-led-matrix/include/Exception/: Illegal.h  Null_Pointer.h  String_Exception.h  Timeout.h  Unknown_Type.h
rgb-led-matrix/include/Frame/: Frame.h
rgb-led-matrix/include/Frame_Manager/: Frame_Manager.h
rgb-led-matrix/include/IO/: Node.h  Root.h
rgb-led-matrix/include/Logger/: Logger.h
rgb-led-matrix/include/Mapper/: Mapper.h
rgb-led-matrix/include/Panel/: MultiPanel.h  MultiPanel_Mapper.h  Panel.h  Panel_Pixel_Mapper.h  Simple_Panel.h  Single_Panel.h
rgb-led-matrix/lib/: README.md
rgb-led-matrix/lib/include/: LEDPanel.h  framecanvas.h
rgb-led-matrix/lib/src/: CMakeLists.txt  LEDPanel.cpp  RGBMatrix.cpp  framecanvas.cc  framecanvas.cpp  led-matrix.cc  led-matrix.cpp
rgb-led-matrix/lib/src/IO/: CMakeLists.txt
rgb-led-matrix/lib/src/IO/Control/: CMakeLists.txt  Control.cpp
rgb-led-matrix/lib/src/IO/Control/COM_Control/: CMakeLists.txt  COM_Control.cpp
rgb-led-matrix/lib/src/IO/Node/: CMakeLists.txt  Node.cpp
rgb-led-matrix/lib/src/IO/Node/FTDI_UART/: CMakeLists.txt  FTDI_UART.cpp
rgb-led-matrix/lib/src/IO/Node/Test_Node/: CMakeLists.txt  Test_Node.cpp
rgb-led-matrix/lib/src/IO/Protocol/: CMakeLists.txt  Control_Protocol.cpp  Data_Protocol.cpp  Protocol.cpp
rgb-led-matrix/lib/src/IO/Protocol/RP2040_UART/: CMakeLists.txt  Control.cpp  Data.cpp  Query.cpp  RP2040_UART.cpp  Status.cpp  internal.cpp
rgb-led-matrix/lib/src/IO/Protocol/RP2040_UART/Control_Protocol/: CMakeLists.txt  Control.cpp  RP2040_UART_Control.cpp
rgb-led-matrix/lib/src/IO/Protocol/RP2040_UART/Data_Protocol/: CMakeLists.txt  Data.cpp  Data_Worker.cpp  Query.cpp  Query_Worker.cpp  RP2040_UART.cpp  RP2040_UART_Data.cpp  Status.cpp  Status_msg.cpp
rgb-led-matrix/lib/src/IO/Protocol/RP2040_UART/Data_Protocol/Data_Operation/: CMakeLists.txt  Data_Command.cpp
rgb-led-matrix/lib/src/IO/Protocol/RP2040_UART/Data_Protocol/Query_Request/: CMakeLists.txt  Query_Request.cpp  Query_Temperature.cpp
rgb-led-matrix/lib/src/IO/Root/: CMakeLists.txt
rgb-led-matrix/lib/src/IO/Root/FT4232/: CMakeLists.txt  FT4232.cpp
rgb-led-matrix/lib/src/IO/Scheduler/: CMakeLists.txt  Scheduler.cpp
rgb-led-matrix/lib/src/Panel/: CMakeLists.txt  LEDPanel.cpp  MultiPanel.cpp  MultiPanel_Internal.cpp  MultiPanel_Mapper.cpp  Panel_Internal.cpp  Panel_Pixel_Mapper.cpp  Single_Panel_Internal.cpp
rgb-led-matrix/lib/src/Panel/LEDPanel/: CMakeLists.txt  LEDPanel.cpp
rgb-led-matrix/lib/src/Panel/Mapper/Pixel/: Pixel.cpp
rgb-led-matrix/lib/src/Panel/Mapper/Pixel_Mapper/: Pixel_Mapper.cpp
rgb-led-matrix/lib/src/Panel/RGB/: RGB.cpp
rgb-led-matrix/lib/src/Panel/SIMD/: CMakeLists.txt
rgb-led-matrix/lib/src/Panel/SIMD/ARM/: CMakeLists.txt  SIMD.cpp  SIMD_SINGLE.cpp  SIMD_SINGLE_float32.cpp  SIMD_SINGLE_uint32.cpp
rgb-led-matrix/lib/src/Panel/SIMD/Portable/: CMakeLists.txt  SIMD.cpp  SIMD_SINGLE.cpp
rgb-led-matrix/lib/src/port/linux_x64/: CMakeLists.txt
rgb-led-matrix/lib/src/port/linux_x64/test/: CMakeLists.txt  main.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/: CMakeLists.txt  helper.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/gpio/: gpio.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/pin-mapper/: PinMapping.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/pin-mapper/HUB75/: HUB75_Pins.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/pin-pulser/HUB75/: OE_Thread.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/pin-pulser/PICO/: PICO.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/test/: CMakeLists.txt  main.cpp
rgb-led-matrix/lib/src/port/rock_pi_s/thread/: Thread.cpp
rgb-led-matrix/lib/src/port/rpi/: CMakeLists.txt  helper.cpp  main.cpp
rgb-led-matrix/lib/src/port/rpi/gpio/: gpio.cc  gpio.cpp
rgb-led-matrix/lib/src/port/rpi/pin-mapper/: PinMapping.cpp  hardware-mapping.c
rgb-led-matrix/lib/src/port/rpi/pin-mapper/HUB75/: HUB75_Pins.cpp
rgb-led-matrix/lib/src/port/rpi/pin-mapper/RP2040/: RP2040_Pins.cpp
rgb-led-matrix/lib/src/port/rpi/pin-pulser/: OE_Thread.cpp  PinPulser.cpp
rgb-led-matrix/lib/src/port/rpi/pin-pulser/HUB75/: OE_Thread.cpp
rgb-led-matrix/lib/src/port/rpi/test/: CMakeLists.txt  main.cpp
rgb-led-matrix/lib/src/port/rpi/thread/: thread.cc  thread.cpp
scripts/: pi_cross_compile_setup.sh  rock_pi_s_cross_compile_setup.sh
(+157 files in other folders)
